fix: season selector spacing in video layout

--- a/packages/ui-react/src/components/VideoLayout/VideoLayout.module.scss
+++ b/packages/ui-react/src/components/VideoLayout/VideoLayout.module.scss
@@ -136,7 +136,7 @@
 }
 
 .filtersInline {
-  margin-bottom: variables.$base-spacing;
+  margin: variables.$base-spacing 24px;
   padding-bottom: variables.$base-spacing;
   border-bottom: 1px solid rgba(255, 255, 255, 0.3);
 }
